gfx/layers/opengl/CompositorOGL.cpp
@@ -934,7 +934,6 @@ CompositorOGL::GetProgramTypeForEffect(Effect *aEffect) const
   case EFFECT_SOLID_COLOR:
     return gl::ColorLayerProgramType;
   case EFFECT_RGBA:
-  case EFFECT_RGBA_EXTERNAL:
   case EFFECT_RGBX:
   case EFFECT_BGRA:
   case EFFECT_BGRX:
@@ -1045,8 +1044,7 @@ CompositorOGL::DrawQuad(const Rect& aRect, const Rect& aClipRect,
   case EFFECT_BGRA:
   case EFFECT_BGRX:
   case EFFECT_RGBA:
-  case EFFECT_RGBX:
-  case EFFECT_RGBA_EXTERNAL: {
+  case EFFECT_RGBX: {
       TexturedEffect* texturedEffect =
           static_cast<TexturedEffect*>(aEffectChain.mPrimaryEffect.get());
       Rect textureCoords;
@@ -1058,10 +1056,8 @@ CompositorOGL::DrawQuad(const Rect& aRect, const Rect& aClipRect,
       }
 
       source->AsSourceOGL()->BindTexture(LOCAL_GL_TEXTURE0);
-      if (aEffectChain.mPrimaryEffect->mType == EFFECT_RGBA_EXTERNAL) {
-        EffectRGBAExternal* effectRGBAExternal =
-          static_cast<EffectRGBAExternal*>(aEffectChain.mPrimaryEffect.get());
-        program->SetTextureTransform(effectRGBAExternal->mTextureTransform);
+      if (programType == gl::RGBALayerExternalProgramType) {
+        program->SetTextureTransform(source->AsSourceOGL()->GetTextureTransform());
       }
 
       mGLContext->ApplyFilterToBoundTexture(source->AsSourceOGL()->GetTextureTarget(),
